[gd_scene load_steps=18 format=3 uid="uid://bhpkb8me38jf"]

[ext_resource type="Script" path="res://scenes/Jamie/scripts/3DLevel.gd" id="1_adykv"]
[ext_resource type="PackedScene" uid="uid://d4k5er881yygp" path="res://scenes/Jamie/player/Player.tscn" id="1_en333"]
[ext_resource type="PackedScene" uid="uid://xanvybi2rb5w" path="res://scenes/Jamie/interface/menu/FinalMenu.tscn" id="3_xyihg"]
[ext_resource type="Texture2D" uid="uid://bhpbs31may5he" path="res://scenes/Jamie/interface/wall/cube_texture.png" id="4_e2wmh"]
[ext_resource type="FontFile" uid="uid://b74wj7a61oel6" path="res://scenes/Jamie/interface/fonts/Montserrat-ExtraBold.ttf" id="5_jyl02"]
[ext_resource type="Script" path="res://scenes/Jamie/scripts/Timer.gd" id="7_qb6fi"]
[ext_resource type="Script" path="res://scenes/Jamie/scripts/Scoreboard.gd" id="8_5m3r7"]
[ext_resource type="Texture2D" uid="uid://bstkvm0dlli1g" path="res://scenes/Jamie/maps/hard_level_map1.png" id="9_0nipa"]
[ext_resource type="PackedScene" uid="uid://b6jfiywsongok" path="res://scenes/Jamie/world/Goal.tscn" id="9_sfovk"]
[ext_resource type="Texture2D" uid="uid://dr4oh7gvjo0pe" path="res://scenes/Jamie/maps/hard_level_map2.png" id="10_pwtep"]
[ext_resource type="Texture2D" uid="uid://c5p7iyjq5bm6w" path="res://scenes/Jamie/maps/hard_level_map3.png" id="11_j2i2d"]
[ext_resource type="Texture2D" uid="uid://b64s2vf0ctnh1" path="res://scenes/Jamie/maps/normal_level_map1.png" id="12_0tk4q"]
[ext_resource type="Texture2D" uid="uid://sphdbbwnkjmj" path="res://scenes/Jamie/maps/normal_level_map2.png" id="13_o44vg"]
[ext_resource type="Texture2D" uid="uid://cnj4nhmh04m0d" path="res://scenes/Jamie/maps/normal_level_map3.png" id="14_1ed3j"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_oe43y"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_8crvg"]
sky_material = SubResource("ProceduralSkyMaterial_oe43y")

[sub_resource type="Environment" id="Environment_mx3ex"]
background_mode = 2
sky = SubResource("Sky_8crvg")
tonemap_mode = 2
glow_enabled = true
adjustment_enabled = true
adjustment_brightness = 1.4
adjustment_contrast = 1.2

[node name="Game" type="Node3D"]
script = ExtResource("1_adykv")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_mx3ex")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_en333")]
transform = Transform3D(-0.00130906, 0, 0.999999, 0, 1, 0, -0.999999, 0, -0.00130906, 14.7119, 1.08666, 38.3666)

[node name="Goal" parent="." instance=ExtResource("9_sfovk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -25.9638, 1.72622, -34.117)

[node name="DifficultyMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="Sprite2D" parent="DifficultyMenu"]
position = Vector2(960.5, 541)
scale = Vector2(30.1094, 17)
texture = ExtResource("4_e2wmh")

[node name="CenterContainer" type="CenterContainer" parent="DifficultyMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Column" type="VBoxContainer" parent="DifficultyMenu/CenterContainer"]
layout_mode = 2

[node name="Normal" type="Button" parent="DifficultyMenu/CenterContainer/Column"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_jyl02")
theme_override_font_sizes/font_size = 32
text = "Normal"

[node name="Hard" type="Button" parent="DifficultyMenu/CenterContainer/Column"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_jyl02")
theme_override_font_sizes/font_size = 32
text = "Hard"

[node name="FinalMenu" parent="." instance=ExtResource("3_xyihg")]
visible = false

[node name="Timer" type="Panel" parent="."]
visible = false
offset_left = 9.0
offset_top = 344.0
offset_right = 297.0
offset_bottom = 377.0
script = ExtResource("7_qb6fi")

[node name="Minutes" type="Label" parent="Timer"]
layout_mode = 0
offset_left = 105.0
offset_top = 5.0
offset_right = 142.0
offset_bottom = 60.0
text = "00:"
horizontal_alignment = 1

[node name="Seconds" type="Label" parent="Timer"]
layout_mode = 0
offset_left = 134.0
offset_top = 5.0
offset_right = 160.0
offset_bottom = 31.0
text = "00:"
horizontal_alignment = 1

[node name="Msecs" type="Label" parent="Timer"]
layout_mode = 0
offset_left = 151.0
offset_top = 5.0
offset_right = 191.0
offset_bottom = 31.0
text = "00:"
horizontal_alignment = 1

[node name="Scoreboard" type="Panel" parent="."]
visible = false
offset_left = 9.0
offset_top = 301.0
offset_right = 297.0
offset_bottom = 334.0
script = ExtResource("8_5m3r7")

[node name="Score" type="Label" parent="Scoreboard"]
layout_mode = 0
offset_left = 105.0
offset_top = 4.0
offset_right = 204.0
offset_bottom = 30.0
text = "Score:"

[node name="Maps" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 305.0
offset_bottom = 290.0

[node name="Hard1" type="Sprite2D" parent="Maps"]
visible = false
position = Vector2(152.05, 145.226)
scale = Vector2(0.39882, 0.376524)
texture = ExtResource("9_0nipa")

[node name="Hard2" type="Sprite2D" parent="Maps"]
visible = false
position = Vector2(151.917, 145.305)
scale = Vector2(0.399169, 0.376319)
texture = ExtResource("10_pwtep")

[node name="Hard3" type="Sprite2D" parent="Maps"]
visible = false
position = Vector2(152.214, 145.109)
scale = Vector2(0.398388, 0.37683)
texture = ExtResource("11_j2i2d")

[node name="Normal1" type="Sprite2D" parent="Maps"]
visible = false
position = Vector2(152.364, 144.997)
scale = Vector2(0.437622, 0.417274)
texture = ExtResource("12_0tk4q")

[node name="Normal2" type="Sprite2D" parent="Maps"]
visible = false
position = Vector2(152.124, 144.479)
scale = Vector2(0.438315, 0.415888)
texture = ExtResource("13_o44vg")

[node name="Normal3" type="Sprite2D" parent="Maps"]
visible = false
position = Vector2(152.261, 145.298)
scale = Vector2(0.43792, 0.416407)
texture = ExtResource("14_1ed3j")

[connection signal="pressed" from="DifficultyMenu/CenterContainer/Column/Normal" to="." method="_on_normal_pressed"]
[connection signal="pressed" from="DifficultyMenu/CenterContainer/Column/Hard" to="." method="_on_hard_pressed"]
[connection signal="next" from="FinalMenu" to="." method="_on_final_menu_next"]
[connection signal="retried" from="FinalMenu" to="." method="_on_final_menu_retried"]
